--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "csvtojson": "^2.0.10",
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.0",
     "nodemon": "^3.1.4"
   }
